// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEXTSQUAREUI SNAPSHOTS TESTS high small TextSquareUI should not be changed 1`] = `
<div
  class="value  value_high"
  data-testid="textSquare"
>
  9.5
</div>
`;

exports[`TEXTSQUAREUI SNAPSHOTS TESTS no high medium TextSquareUI should not be changed 1`] = `
<div
  class="value"
  data-testid="textSquare"
>
  6.5
</div>
`;
